(Format: Year/Month/Day)
Changes for 0.9.4:
*03/07/04:
   * Add support in remember for grouping apps (Simon)
     Achieved by using [group], e.g.
     [group]
       [app] (title=groupme)
       [Deco] {NONE}
     [end]
     will group anything with the title "groupme" and will give that group
     no decorations. You can have multiple [app] lines in a [group].
     Recall that app lines can also use regular expressions.
     - also includes split AtomHandler::setupWindow(fbw) into 
       setupFrame(fbw) and setupClient(winclient).
     Remember.hh/cc Window.cc Screen.cc fluxbox.hh/cc 
     AtomHandler.hh Gnome.hh/cc Ewmh.hh/cc ToolbarHandler.hh/cc
*03/07/03:
   * Added selected dot for style menu so one can see which style is selected (Henrik)
     Screen.cc
   * Fixed Slit autohide bug (Henrik)
     Slit.cc
*03/07/01:
   * Added keyboard navigation for menus (Henrik)
     (click on title to get input focus, unless you're using RootMenu in keys)
     Use keys:
	   Up/Down:  select menu item
	   Left/Right: go in/out from submenus
	   Escape: close menu and return focus to windows
	   Enter: run/execute/toggle menu item
     Menu.hh/cc, fluxbox.cc
   * Fixed reconfigure toolbar on screen reconfig signal (Henrik)
     Screen.hh/cc, Toolbar.cc
   * Fixed workspace label redraw bug (Thanks Jochem Kossen j.kossen<a(T)>home.nl)
     ToolbarHandler.cc
*03/06/30:
   * Fixed so we can use the same action strings in menu as in key actions (Henrik)
     Screen.cc
   * Added command "ShowDesktop" (Henrik)
     This command iconifies all windows and shows the desktop
     WorkspaceCmd.hh/cc, FbCommandFactory.cc
   * Added command "ArrangeWindows"  (Thanks Ricardo Martins <thecrown<a(t)>softhome.net> )
     This command arranges so all windows are in a nice row/col order
     WorkspaceCmd.hh/cc, FbCommandFactory.cc
   * Changed class Keys to use FbTk::Command (Henrik)
     Keys.hh/cc, fluxbox.cc
   * Added Files:  (Henrik)
      CommandParser.hh/cc, FbCommandFactory.hh/cc, 